<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registerActivityLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".berlinView.RegisterActivity">

    <LinearLayout
        android:id="@+id/registerLinearLayout"
        android:layout_width="357dp"
        android:layout_height="491dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.155">

        <EditText
            android:id="@+id/firstnameEditText"
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/firstname"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/surenameEditText"
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/surename"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/genderEditText"
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/gender"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/emailEditTextRegister"
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/email"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/passwordEditTextRegister"
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/password"
            android:textSize="30sp" />

    </LinearLayout>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="267dp"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="94dp"
        android:layout_marginBottom="104dp"
        android:backgroundTint="#B6B2B2"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerLinearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>