...
        android:layout_marginTop="130dp"
        android:layout_marginEnd="118dp"
        android:layout_marginBottom="60dp"
        android:backgroundTint="#EF3737"
        android:text="@string/map"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/loginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/berlinStreetTextView" />

    <Button
        android:id="@+id/logoutButton"
...
        android:layout_marginTop="12dp"
        android:layout_marginEnd="118dp"
        android:layout_marginBottom="60dp"
        android:backgroundTint="#00BAB4B4"
        android:text="@string/logout"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/registerButtonMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mapButton" />

</androidx.constraintlayout.widget.ConstraintLayout>
